# cloudflare-ddns

./: .env.example  Cargo.toml  Dockerfile  readme.md
.github/workflows/: docker-image.yml
src/: cloudflare.rs  main.rs
