[package]
name = "cloudflare-ddns"
version = "0.1.0"
edition = "2024"
description = "A simple program to dynamically update your IPv4 DNS records in Cloudflare"
authors = ["Vladimir Nachbaur <vizigr0u@gmail.com>"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
dotenvy = "0.15"
