[package]
name = "cloudflare-ddns"
version = "0.2.1"
edition = "2024"
description = "A Dynamic DNS script to update out-of-date Type A DNS entries managed by Cloudflare"
authors = ["Vladimir Nachbaur <vizigr0u@gmail.com>"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.46", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
